--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.66.9",
     "mongodb": "^6.13.1",
     "next": "15.1.7",
     "react": "^19.0.0",
